@@ -1,3 +1,4 @@
 #!/bin/sh
 
-grep-dctrl --quiet -F Source -r '^node-.*$' debian/control
+grep-dctrl --quiet -F Source -r '^node-.*$' debian/control || \
+  grep-dctrl --quiet -F Package -r '^node-.*$' debian/control
